# ragbot-core

./: .gitignore  =1.2.10  =20.0  BASELINE_ANALYSIS.md  GITHUB_PUSH_GUIDE.md  HYBRID_SEARCH_IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  REORGANIZATION_SUMMARY.md  SAMPLE_QUERIES.md  config.py  deploy_production.py  docker-compose.yml  env_venv_backup.yml  pyproject.toml  rag_qdrant.py  requirements.txt  test.py  update.ipynb
core/: comprehensive_logger.py  config.py  hybrid_search.py  index.py  io.py  logger.py  qa.py  search.py
docs/: METADATA_FIX_SUMMARY.md  QUICK_TESTS.md  SYNTAX_ERROR_FIX.md  SYSTEM_REVIEW.md
docs/architecture/: PROJECT_TRANSFORMATION_PLAN.md  UPDATE_IMPLEMENTATION_GUIDE.md
docs/development/: FILE_AUDIT.md  FINAL_FIX_SUMMARY.md  IMPLEMENTATION_PLAN.md  TEST_CHECKLIST.md  VERIFICATION_REPORT.md
docs/guides/: EVALUATION_AND_SAFETY_GUIDE.md  PRODUCTION_GUIDE.md  TESTING_GUIDE.md
docs/research/: EVALUATION_STRATEGY.md  HYBRID_SEARCH_FIX.md
evaluation/datasets/: TEST_QUERIES.md
metadata/: loader_report.csv
scripts/: app_streamlit.py  build_bm25_index.py  classify_docs.py  config.py  direct_embedding_pipeline.py  embed.py  embed_chunks.py  embed_chunks_milvus.py  embed_chunks_qdrant.py  embed_ocr_only.py  ingest.py  ingest_pool.py  manifest.py  nuclear_cleanup.py  parse_excel.py  rag_api_milvus.py  rag_qdrant.py  search.py  test_hybrid_search.py  unified_document_processor.py
scripts/data_processing/: embed.py  parse_excel.py
scripts/deployment/: search.py
scripts/evaluation/: validate_hybrid.py
scripts/tools/: ensure_qdrant.py  run_loader_demo.py  smart_loader.py
src/core/: config.py  domain.py  index.py  logger.py
ui/: app_streamlit.py  multilingual_tender_bot.py  simple_chat_bot.py  tender_bot_ui.py
ui/streamlit/: app.py
